--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
         </thread>
       </table>
     </div>
-    <script type = "text/javascript"
-      src = "https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js">
-    </script>
-    <script type = "text/javascript"
-      src = "https://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js">
-    </script>
-    <script type = "text/javascript"
-      src = "https://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js">
-    </script>
-    <script src = "scripts.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone.js"></script>
+    <script type = "text/javascript" src = "scripts.js"></script>
   </body>
 </html>
