--- a/index.html
+++ b/index.html
@@ -9,19 +9,36 @@
     <div class="container">
       <h1>Backbone Tutorial Blogroll App</h1>
       <table class="table">
-        <thread>
+        <thead>
           <tr>
             <th>Author</th>
             <th>Title</th>
             <th>URL</th>
             <th>Action</th>
           </tr>
-        </thread>
+          <tr>
+            <td><input class="form-control author-input"></input></td>
+            <td><input class="form-control title-input"></input></td>
+            <td><input class="form-control url-input"></input></td>
+            <td><button class="btn btn-primary add-blog">Add</button></td>
+          </tr>
+        </thead>
+        <tbody class="blogs-list">
+        </tbody>
       </table>
     </div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone.js"></script>
+    <script type="text/template" class="blogs-list-template">
+      <td><span class="author"><%= author %></span></td>
+      <td><span class="title"><%= title %></span></td>
+      <td><span class="url"><%= url %></span></td>
+      <td>
+        <button class="btn btn-warning edit-blog">Edit</button>
+        <button class="btn btn-danger delete-blog">Delete</button>
+      </td>
+    </script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.cdnjs.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
+    <script type="text/javascript" src="https://ajax.cdnjs.com/ajax/libs/backbone.js/1.2.1/backbone-min.js"></script>
     <script type = "text/javascript" src = "scripts.js"></script>
   </body>
 </html>
