--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <td>
         <button class="btn btn-warning edit-blog">Edit</button>
         <button class="btn btn-danger delete-blog">Delete</button>
+        <button class="btn btn-success update-blog" style="display:none">Update</button>
+        <button class="btn btn-danger cancel" style="display:none">Cancel</button>
       </td>
     </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
