Create express server

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,6 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.cdnjs.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
     <script type="text/javascript" src="https://ajax.cdnjs.com/ajax/libs/backbone.js/1.2.1/backbone-min.js"></script>
-    <script type = "text/javascript" src = "scripts.js"></script>
+    <script type = "text/javascript" src = "javascripts/scripts.js"></script>
   </body>
 </html>
